--- a/PG3.vcxproj
+++ b/PG3.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{80078B93-6324-4A99-80B7-5009598262FE}</ProjectGuid>
+    <ProjectGuid>{4f4c5ce4-6380-45ea-8884-b8d7a090e157}</ProjectGuid>
     <RootNamespace>PG3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -126,10 +126,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include=".editorconfig" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Yamanote2022.cpp" />
+    <None Include=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GetStations.h" />
